- added tag management frontend (Thorsten)
- added full support for SQLite3 (Peter Kehl)
- added control for meta robots handling (Thorsten)
- added configuration for auto-activation of new users (Christopher Andrews)
- added support for SMTP (Christopher Andrews)
- added bundled Typeahead.js (Thorsten)
- added support for custom headers and footers in PDF exports (Thorsten)
- extended REST/JSON API (Thorsten)
- updated bundled Symfony ClassLoader to version 2.6.3 (Thorsten)
- updated bundled jQuery to version 1.11.2 (Thorsten)
- updated bundled Bootstrap to version 3.3.2 (Thorsten)
- updated bundled Font Awesome to version 4.3.0 (Thorsten)
- updated bundled Modernizr to version 2.8.3 (Thorsten)
- updated bundled TinyMCE to version 4.1.7 (Thorsten)
- updated bundles SwiftMailer to version 5.3.1 (Christopher Andrews, Thorsten)
- dropped support for ext/mysql (Thorsten)
- dropped support for SQLite2 (Thorsten)

Version 2.8.22 - 2015-03-
- updated Czech translation
- updated Brazilian Portuguese translation
- fixed some minor bugs (Thorsten)

Version 2.8.21 - 2015-02-28
- added experimental rewrite rules for IIS7 and IIS8 (Thorsten)
- improved usability in admin backend (Thorsten)
- improved HTML5 support in editor (Thorsten)
- improved code coverage (Thorsten)
- updated Brazilian Portuguese translation
- fixed some minor bugs (Thorsten)

Version 2.8.20 - 2015-02-07
- added experimental support for HHVM 3.4.2+
- added experimental support for PHP 7.0
- updated Brazilian Portuguese translation
- updated French translation (Olivier Binet)
- fixed some minor bugs (Thorsten)

Version 2.8.19 - 2014-12-31
- fixed some minor bugs (Thorsten)

Version 2.8.18 - 2014-11-30
- added clickjacking prevention (Thorsten, Narendra Bhati)
- fixed some minor bugs (Thorsten)

Version 2.8.17 - 2014-11-05
- fixed typo in update script (Thorsten)

Version 2.8-16 - 2014-11-03
- fixed restore from backup (Thorsten)
- fixed some minor bugs (Thorsten)

Version 2.8.15 - 2014-10-02