@@ -283,6 +283,7 @@ PRIMARY KEY (id))";
 //faqquestions
 $query[] = "CREATE TABLE " . PMF_Db::getTablePrefix() . "faqquestions (
 id INTEGER NOT NULL,
+lang varchar(5) NOT NULL,
 username varchar(100) NOT NULL,
 email varchar(100) NOT NULL,
 category_id INTEGER NOT NULL,
