@@ -281,6 +281,7 @@ PRIMARY KEY (id))";
 //faqquestions
 $query[] = "CREATE TABLE " . PMF_Db::getTablePrefix() . "faqquestions (
 id integer NOT NULL,
+lang varchar(5) NOT NULL,
 username varchar(100) NOT NULL,
 email varchar(100) NOT NULL,
 category_id integer NOT NULL,
